--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-preset-es2015": "^6.3.13",
-    "babel-register": "^6.3.13"
+    "babel-register": "^6.3.13",
+    "fs-extra": "^0.26.7"
   }
 }
